--- a/views/venue/show.erb
+++ b/views/venue/show.erb
@@ -11,7 +11,7 @@
 <script>
   $(document).ready(function() {
     setTimeout(function() {
-      $('#content').load('/venue/<%= @venue %>');}, 10000);
+      $('#content').load('/<%= @venue %>/orders');}, 10000);
   });
 </script>
 </div>
