--- a/views/menu.erb
+++ b/views/menu.erb
@@ -1,6 +1,6 @@
 <div id='content'>
 
-  <h3><%= @venue.name %> | <%= table %></h3>
+  <h3><%= @venue.name %> near <%= @location %></h3>
 
   <div class="menu" style="background-color: #eeeeee; color: #555555;">
     <h2 style="padding-left:10px;"><a href="#add-drink-modal" data-toggle="modal">Add Drink</a></h2>
