--- a/views/orders/checkin.erb
+++ b/views/orders/checkin.erb
@@ -15,7 +15,7 @@
   <p>
   	<div class="input-prepend">
   		<span class="add-on">Table #</span>
-  		<input class="span2" id="prependedInput" type="text" name='table' placeholder='7'>
+  		<input class="span2" id="prependedInput" type="text" name='location' placeholder='7'>
 		</div>
 	</p>
 
