Changed all tables to locations. Drink Menu is implemented and working intermittently, need to stabalize and clean up. Also need to remove the individual drink removal icons in favor of a page reset. Also need to retrofit so multiple liquor orders can be support.

--- a/views/checkin.erb
+++ b/views/checkin.erb
@@ -1,6 +1,6 @@
 <div class='alert alert-info'>Tell us who you are and where you're sitting.</div>
 
-<h3>@<%= venue %></h3>
+<h3><%= @venue.name %> and <%= session[:phone] %></h3>
 
 	<form action='/orders/drinks' method='post' class="form-horizontal">
 			
@@ -14,8 +14,8 @@
 
   	<p>
   		<div class="input-prepend">
-  			<span class="add-on">Table #</span>
-  			<input class="span2" id="prependedInput" type="text" name='table'>
+  			<span class="add-on">Section #</span>
+  			<input class="span2" id="prependedInput" type="text" name='location'>
 			</div>
 		</p>
 
