--- a/views/location/change.erb
+++ b/views/location/change.erb
@@ -5,7 +5,7 @@
 	<form action='/location/confirm' method='post' class="form-horizontal">
 
   	<p>
-  	<select type="text" name='table'>
+  	<select type="text" name='location'>
       <option>Front Covered Patio</option>
       <option>Main Area Near</option>
       <option>Main Area Mid</option>
