--- a/views/menutest.erb
+++ b/views/menutest.erb
@@ -1,6 +1,6 @@
 <div id='content'>
 
-  <h3>@<%= venue %> | <%= table %></h3>
+  <h3>@<%= venue %> | <%= location %></h3>
 
   <div class="menu" style="background-color: #eeeeee; color: #555555;">
     <h2 style="padding-left:10px;"><a href="#add-drink-modal" data-toggle="modal">Add Drink</a></h2>
