--- a/views/moontower/barkeeper.erb
+++ b/views/moontower/barkeeper.erb
@@ -4,7 +4,7 @@
 
     <div class="row-fluid" style="background: #A21721; color: white">	
       <div style="padding:25px;" class="span6">
-    	 <h1><%= order.drinks %></h1>
+    	 <h1><%= order.drinks_1 %></h1>
       </div>
 
       <div class="span3 offset3">
