--- a/views/moontower/checkin.erb
+++ b/views/moontower/checkin.erb
@@ -13,7 +13,7 @@
   </p>
 
   <p>
-  	<select type="text" name='table'>
+  	<select type="text" name='location'>
   		<option>Front Covered Patio</option>
   		<option>Main Area Near</option>
   		<option>Main Area Mid</option>
