--- a/views/barkeeper.erb
+++ b/views/barkeeper.erb
@@ -21,7 +21,7 @@
       <div class="order-received <%= "hide" if order.received_at.nil? %>">
         <div class="span6" style="padding:25px;" >
           <div class="top-row"><h3><%= order.lastname %>, <%= order.firstname %></h3></div>
-          <div class="main-row"><h1><%= order.drinks %></h1></div>
+          <div class="main-row"><h1><%= order.drinks_1 %></h1></div>
           <div class="bottom-row"><h3>Order <%= order.id %> - <%= pretty_date(order.created_at) %></h3></div>
         </div>
 
