--- a/views/location/confirm.erb
+++ b/views/location/confirm.erb
@@ -1,10 +1,10 @@
-<div class='alert alert-info'><%= firstname %>, your location has been changed to <%= table %></div>
+<div class='alert alert-info'><%= firstname %>, your location has been changed to <%= location %></div>
 
 <div id='content'>
   <% @orders.each do |order| %>
           
     <h5><%= order.lastname %> at <a href="/<%= order.venue %>/orders"><%= order.venue %></a> <a href="/<%= order.venue %>/location/<%= order.location %>">Table <%= order.location %></a></h5>
-    <h4><a href="/orders/<%= order.id %>"><%= order.drinks %></a></h4>
+    <h4><a href="/orders/<%= order.id %>"><%= order.drinks_1 %></a></h4>
     <p>from <%= order.phone %></p>
     <hr>
     <script>
