--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -3,7 +3,7 @@
 		<% @orders.each do |order| %>
   				
     	<h5><%= order.venue %> at <%= order.location %></h5>
-    	<h4><%= order.drinks %> <%= ' | <i class="icon-eye-open"></i>' unless order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless order.fulfilled_at.nil? %></h4>
+    	<h4><%= order.drinks_1 %> <%= ' | <i class="icon-eye-open"></i>' unless order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless order.fulfilled_at.nil? %></h4>
     	<p>by <%= order.firstname %></p>
     	<hr>
   	<% end %>
