--- a/views/orders/show.erb
+++ b/views/orders/show.erb
@@ -2,8 +2,8 @@
 <div class='alert alert-info'>Your order(below) will update with icons when seen then made. Show number to your server. Other options are in the upper right navbar.</div>
 <div class="row-fluid" style="background: #555555; color: #f9f9f9">
 	<div style="padding:10px;" class="span12">
-		<h5><%= @order.venue %> at <%= @order.table %></h5>
-  	<h4><%= @order.drinks %> <%= ' | <i class="icon-eye-open"></i>' unless @order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless @order.fulfilled_at.nil? %></h4>
+		<h5><%= @order.venue %> at <%= @order.location %></h5>
+  	<h4><%= @order.drinks_1 %> <%= ' | <i class="icon-eye-open"></i>' unless @order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless @order.fulfilled_at.nil? %></h4>
   	<p><a href="/user/<%= @order.phone %>">Order <%= @order.id %> by <%= @order.firstname %> <%= @order.lastname %></a></p>
   </div>
 </div>
