--- a/views/orders/user.erb
+++ b/views/orders/user.erb
@@ -1,8 +1,8 @@
 <h1><%= order.phone %></h1><br>
 	<% @orders.each do |order| %>
   				
-    <h4><a href="/orders/<%= order.id %>"><%= order.lastname %></a> at <%= order.venue %> Table <%= order.table %></h4>
-    <h3><%= order.drinks %></h3>
+    <h4><a href="/orders/<%= order.id %>"><%= order.lastname %></a> at <%= order.venue %> Table <%= order.location %></h4>
+    <h3><%= order.drinks_1 %></h3>
     <p>from <%= order.phone %></p>
     <br>
   <% end %>
