--- a/views/venue/show.erb
+++ b/views/venue/show.erb
@@ -2,8 +2,8 @@
 <h3><%= @venue %></h3><hr>
   <% @orders.each do |order| %>
           
-    <h5><%= order.venue %> at <%= order.table %></h5>
-    <h4><a href="/orders/<%= order.id %>">Order <%= order.id %> | <%= order.drinks %></a> <%= ' | <i class="icon-eye-open"></i>' unless order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless order.fulfilled_at.nil? %></h4>
+    <h5><%= order.venue %> at <%= order.location %></h5>
+    <h4><a href="/orders/<%= order.id %>">Order <%= order.id %> | <%= order.drinks_1 %></a> <%= ' | <i class="icon-eye-open"></i>' unless order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless order.fulfilled_at.nil? %></h4>
     <p>by <%= order.firstname %> <%= order.lastname %></p>
     <hr>
   <% end %>
