--- a/views/venue/liquor/edit.erb
+++ b/views/venue/liquor/edit.erb
@@ -10,8 +10,8 @@
         <h3>Vodka</h3>
         <% @vodka.each do |vodka| %>
           <label class="checkbox">
-            <input type="checkbox" name="<%= vodka.id %>" <%= @liquor.include?("@vodka.id") ? "checked" : "" %>>
-            <%= vodka.name %>
+            <input type="checkbox" name="<%= vodka.id %>" >
+            <%= vodka.id %> - <%= @venues_liquor %> - <%= @venues_liquor.include?("vodka.id") ? "yes" : "no" %>
           </label>
         <% end %>
       </div>
@@ -20,7 +20,7 @@
         <h3>Tequila</h3>
         <% @tequila.each do |tequila| %>
           <label class="checkbox">
-            <input type="checkbox" name="<%= tequila.id %>" <%= @liquor.include?("tequila.id") ? "checked" : "" %>>
+            <input type="checkbox" name="<%= tequila.id %>" >
             <%= tequila.name %>
           </label>
         <% end %>
@@ -30,7 +30,7 @@
         <h3>Gin</h3>
         <% @gin.each do |gin| %>
           <label class="checkbox">
-            <input type="checkbox" name="<%= gin.id %>" <%= @liquor.include?("gin.id") ? "checked" : "" %>>
+            <input type="checkbox" name="<%= gin.id %>" >
             <%= gin.name %>
           </label>
         <% end %>
@@ -40,7 +40,7 @@
         <h3>Rum</h3>
         <% @rum.each do |rum| %>
           <label class="checkbox">
-            <input type="checkbox" name="<%= rum.id %>" <%= @liquor.include?("rum.id") ? "checked" : "" %>>
+            <input type="checkbox" name="<%= rum.id %>" >
             <%= rum.name %>
           </label>
         <% end %>
