--- a/views/venue/liquor/edit.erb
+++ b/views/venue/liquor/edit.erb
@@ -10,8 +10,8 @@
         <h3>Vodka</h3>
         <% @vodka.each do |vodka| %>
           <label class="checkbox">
-            <input type="checkbox" name="<%= vodka.id %>" >
-            <%= vodka.id %> - <%= @venues_liquor %> - <%= @venues_liquor.include?("vodka.id") ? "yes" : "no" %>
+            <input type="checkbox" name="<%= vodka.id %>" <%= @venues_liquor.include?(vodka.id) ? "checked" : "" %>>
+              <%= vodka.name %>
           </label>
         <% end %>
       </div>
@@ -20,8 +20,8 @@
         <h3>Tequila</h3>
         <% @tequila.each do |tequila| %>
           <label class="checkbox">
-            <input type="checkbox" name="<%= tequila.id %>" >
-            <%= tequila.name %>
+            <input type="checkbox" name="<%= tequila.id %>" <%= @venues_liquor.include?(tequila.id) ? "checked" : "" %>>
+              <%= tequila.name %>
           </label>
         <% end %>
       </div>
@@ -30,8 +30,8 @@
         <h3>Gin</h3>
         <% @gin.each do |gin| %>
           <label class="checkbox">
-            <input type="checkbox" name="<%= gin.id %>" >
-            <%= gin.name %>
+            <input type="checkbox" name="<%= gin.id %>" <%= @venues_liquor.include?(gin.id) ? "checked" : "" %>>
+              <%= gin.name %>
           </label>
         <% end %>
       </div>
@@ -40,8 +40,8 @@
         <h3>Rum</h3>
         <% @rum.each do |rum| %>
           <label class="checkbox">
-            <input type="checkbox" name="<%= rum.id %>" >
-            <%= rum.name %>
+            <input type="checkbox" name="<%= rum.id %>" <%= @venues_liquor.include?(rum.id) ? "checked" : "" %>>
+              <%= rum.name %>
           </label>
         <% end %>
       </div>
