--- a/views/barkeeper.erb
+++ b/views/barkeeper.erb
@@ -8,7 +8,7 @@
         <div class="span6" style="padding:25px;" >
           <div class="top-row"><h3><%= order.lastname %>, <%= order.firstname %></h3></div>
           <div class="main-row"><h1>Order <%= order.id.to_s.rjust(2, "0")[-2..-1] %></h1></div>
-          <div class="bottom-row"><h3><%= pretty_date(order.created_at) %></h3></div>
+          <div class="bottom-row"><h3>Time</h3></div>
         </div>
 
         <div class="span3 offset3" style="color: #e0e1de">
@@ -22,7 +22,7 @@
         <div class="span6" style="padding:25px;" >
           <div class="top-row"><h3><%= order.lastname %>, <%= order.firstname %></h3></div>
           <div class="main-row"><h1><%= order.drinks_1 %></h1></div>
-          <div class="bottom-row"><h3>Order <%= order.id.to_s.rjust(2, "0")[-2..-1] %> - <%= pretty_date(order.created_at) %></h3></div>
+          <div class="bottom-row"><h3>Order <%= order.id.to_s.rjust(2, "0")[-2..-1] %> - Time</h3></div>
         </div>
 
         <div class="span3 offset3" style="color: #e0e1de">
