Attempting to pass the appropriate venue id to the json call in venue.rb from liquor/edit.erb

--- a/views/venue/liquor/edit.erb
+++ b/views/venue/liquor/edit.erb
@@ -66,6 +66,7 @@
         $.ajax({
           type: "POST",
           url: ''.concat("/liquor/checked/", $this.closest(".liquor").data("liquor-id")),
+          data: "{'venue':'<%= @venue.id %>'}"
         });
       }else{
         $.ajax({
