--- a/views/venue/liquor/edit.erb
+++ b/views/venue/liquor/edit.erb
@@ -66,7 +66,7 @@
         $.ajax({
           type: "POST",
           url: ''.concat("/liquor/checked/", $this.closest(".liquor").data("liquor-id")),
-          data: "{'venue':'<%= @venue.id %>'}"
+          data: { "venue": <%= @venue.id.to_json %> }
         });
       }else{
         $.ajax({
